// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge weight: regular tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1avt26p-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-1h89p7b-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: info renders correctly 1`] = `
<div>
  <div
    class="css-1tlhgvu-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-1curl5b-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="11"
      />
      <path
        d="M12 7H12.01"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-8jjqci-boxStyles-StatusBadge"
  >
    <div
      class="css-7rfxu9-boxStyles-NeutralDot"
    />
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1scy3q2-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-1esj8rc-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10.5"
      />
      <path
        d="M7 13L10 16L17 9"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: regular tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-4kcbuf-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-qz15ef-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.8858 2.69113C12.5115 1.97647 11.4876 1.97824 11.1132 2.6929C7.60041 9.39921 5.30783 13.776 1.76707 20.5356C1.4183 21.2014 1.90105 22 2.65269 22H21.3473C22.099 22 22.5819 21.2018 22.2331 20.536L12.8858 2.69113Z"
      />
      <line
        x1="12"
        x2="12"
        y1="14"
        y2="9"
      />
      <path
        d="M12 18H12.01"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1er6y36-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-1h89p7b-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: info renders correctly 1`] = `
<div>
  <div
    class="css-1er6y36-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-1curl5b-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="17"
        y2="11"
      />
      <path
        d="M12 7H12.01"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-1er6y36-boxStyles-StatusBadge"
  >
    <div
      class="css-7rfxu9-boxStyles-NeutralDot"
    />
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1er6y36-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-1esj8rc-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10.5"
      />
      <path
        d="M7 13L10 16L17 9"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge weight: subtle tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1er6y36-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="true"
      class="css-qz15ef-Icon"
      clip-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.8858 2.69113C12.5115 1.97647 11.4876 1.97824 11.1132 2.6929C7.60041 9.39921 5.30783 13.776 1.76707 20.5356C1.4183 21.2014 1.90105 22 2.65269 22H21.3473C22.099 22 22.5819 21.2018 22.2331 20.536L12.8858 2.69113Z"
      />
      <line
        x1="12"
        x2="12"
        y1="14"
        y2="9"
      />
      <path
        d="M12 18H12.01"
      />
    </svg>
    <span
      class="css-1r5adv-boxStyles-Text-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;
